k8s/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: default
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: db-deployment
#   namespace: default
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: db
#   template:
#     metadata:
#       labels:
#         app: db
#     spec:
#       containers:
#         - name: db
#           image: kattafuah/brokencrystals:postgres-VERSION_TAG #-abff3fc1607066afcdaf4ea931d6a2b68709a748
#           env:
#             - name: POSTGRES_DB
#               value: "bc"
#             - name: POSTGRES_USER
#               valueFrom:
#                 configMapKeyRef:
#                   name: app-config
#                   key: DATABASE_USER
#             - name: POSTGRES_PASSWORD
#               valueFrom:
#                 configMapKeyRef:
#                   name: app-config
#                   key: DATABASE_PASSWORD
#           ports:
#             - containerPort: 5432
#       volumes:  # Moved out of containers section
#         - name: pg-volume
#           configMap:
#             name: app-config

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: kattafuah/brokencrystals:postgres-VERSION_TAG #-abff3fc1607066afcdaf4ea931d6a2b68709a748
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/pg.sql
              # subPath: pg.sql
      volumes:
        - name: pg-volume
          configMap:
            name: app-config
        - name: init-script
          configMap:
            name: db-init-scripts-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: default
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs
          image: kattafuah/brokencrystals:nodejs-VERSION_TAG #-abff3fc1607066afcdaf4ea931d6a2b68709a748
          ports:
            - containerPort: 3000
          resources:
            requests: 
              cpu: "1000m"
            limits:
              cpu: "1500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1


---
apiVersion: v1
kind: Service
metadata:
  name: mailcatcher-service
  namespace: default
spec:
  selector:
    app: mailcatcher
  ports:
    - name: http  # Added name for this port
      protocol: TCP
      port: 1080
      targetPort: 1080
    - name: smtp  # Added name for this port
      protocol: TCP
      port: 1025
      targetPort: 1025
  type: ClusterIP


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailcatcher-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailcatcher
  template:
    metadata:
      labels:
        app: mailcatcher
    spec:
      containers:
        - name: mailcatcher
          image: kattafuah/brokencrystals:mailcatcher-VERSION_TAG #-abff3fc1607066afcdaf4ea931d6a2b68709a748
          ports:
            - containerPort: 1080
            - containerPort: 1025
